@@ -29,6 +29,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #19532: python -m compileall with no filename/directory arguments now
+  respects the -f and -q flags instead of ignoring them.
+
 - Issue #19623: Fixed writing to unseekable files in the aifc module.
 
 - Issue #17919: select.poll.register() again works with poll.POLLNVAL on AIX.
